--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "sql-typegen",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "",
-  "main": "./src/main.ts",
+  "main": "./dist/index.js",
   "type": "module",
   "bin": "./dist/index.js",
   "keywords": [],
@@ -12,13 +12,14 @@
     "bun-types": "latest"
   },
   "peerDependencies": {
-    "typescript": "^5.0.0"
+    
   },
   "dependencies": {
     "@types/pluralize": "^0.0.33",
     "fp-ts": "^2.16.1",
     "minimist": "^1.2.8",
     "pluralize": "^8.0.0",
-    "postgres": "^3.4.3"
+    "postgres": "^3.4.3",
+    "typescript": "^5.0.0"
   }
 }
