--- a/package.json
+++ b/package.json
@@ -4,15 +4,12 @@
   "description": "",
   "main": "./dist/index.js",
   "type": "module",
-  "bin": "./dist/index.js",
+  "bin": "./dist/index.min.js",
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "bun-types": "latest"
-  },
-  "peerDependencies": {
-    
   },
   "dependencies": {
     "@types/pluralize": "^0.0.33",
