Progress - Release version 0.0.9

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "sql-typegen",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "description": "",
   "type": "module",
   "main": "./dist/index.js",
-  "bin": "./dist/index.min.js",
+  "bin": "./dist/index.js",
   "keywords": [],
   "author": "",
   "license": "ISC",
